# Anon-OpenRouter-Chat

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: deploy.yml
anon_openrouter_chat/: main.py
anon_openrouter_chat/static/: app.js  index.html  style.css
privatechat/: config.py  main.py
privatechat/static/: index.html
public/: site.webmanifest
src/: App.jsx  config.js  index.css  main.jsx
src/components/: Header.jsx  InputArea.jsx  Message.jsx  MessageList.jsx  SettingsModal.jsx  TitleBar.jsx
src/utils/: openrouter.js
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: index.js
