[project]
name = "privatechat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
privatechat = "privatechat.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
